--- a/Tarefas/src/Tarefas.Web/Views/_ViewImports.cshtml
+++ b/Tarefas/src/Tarefas.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using src
-@using src.Models
+﻿@using Tarefas.Web
+@using Tarefas.Web.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
